# azumaneo

./: .gitignore  Cargo.toml  Containerfile  README.md  sqlx-data.json
.github/workflows/: rust.yml
migrations/: 20201220173001_create_users.sql  20210327165423_alter_password_in_users.sql  20210328185527_add_expires_at_in_sessions.sql  20210401143059_add_messages.sql  20210401145201_add_textchannels.sql  20210426174710_rename_timestamp_in_textchannels.sql  20210509100610_make_messages_nullsafe.sql  20210529114400_add_created_at_in_textchannels.sql  20210529125113_simplify_column_names_in_messages.sql  20210529125731_add_references_in_messages.sql  2_create_sessions.sql  3_rename_created_in_users.sql
src/: main.rs  util.rs
src/models/: error.rs  etc.rs  message.rs  mod.rs  pub_sub.rs  rejection.rs  session.rs  stateactor.rs  textchannel.rs  user.rs  ws.rs
src/models/awsp/: error.rs  etc.rs  mod.rs  wrapper.rs
src/routes/: api.rs  init_ws.rs  message.rs  mod.rs  onlinestatus.rs  send_msg.rs  textchannel.rs  user.rs  userstatus.rs
src/routes/api/: info.rs
src/routes/user/: login.rs  mod.rs  register.rs  update.rs
src/websocket/: broker.rs  channelhandler.rs  chatserver.rs  connection.rs  handler.rs  mod.rs  ws_connection_handler.rs
