[package]
name = "azumaneo"
version = "0.1.0"
authors = [
    "cloudybyte <hi@cloudybyte.net>",
    "okrplay <32576280+okrplay@users.noreply.github.com>"
]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "^3.1"
actix-web-actors = "3.0"
actix-broker = "0.3.1"
async-trait = "0.1.48"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.7"
rust-argon2 = "0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.4", features = ["chrono", "macros", "migrate", "offline", "postgres", "runtime-actix-rustls", "uuid"] }
thiserror = "^1.0"
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }

# actix-http is needed for custom 404 response
# actix-http = "2.2.0"